# VideoLearning

./: README.md  settings.gradle
AudioLearning/: README.md  build.gradle
AudioLearning/src/main/: AndroidManifest.xml
AudioLearning/src/main/res/layout/: activity_main.xml
AudioLearning/src/main/res/values/: strings.xml
cameradisplay/: README.md  build.gradle
cameradisplay/src/main/: AndroidManifest.xml
cameradisplay/src/main/java/com/example/cameradisplay/: H264Encoder.java  SurfaceViewActivity.java  TextureViewActivity.java
cameradisplay/src/main/res/layout/: activity_main.xml  activity_texture_view.xml
cameradisplay/src/main/res/values/: strings.xml
ffmpegplayer/: CMakeLists.txt  README.md  build.gradle
ffmpegplayer/src/androidTest/java/com/example/ffmpegplayer/: ExampleInstrumentedTest.java
ffmpegplayer/src/main/: AndroidManifest.xml
ffmpegplayer/src/main/cpp/: native-lib.cpp
ffmpegplayer/src/main/java/com/example/ffmpegplayer/: MainActivity.java  MySurfaceView.java
ffmpegplayer/src/main/res/layout/: activity_main.xml
ffmpegplayer/src/test/java/com/example/ffmpegplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mediaextract/: build.gradle
mediaextract/src/main/: AndroidManifest.xml
mediaextract/src/main/java/com/example/mediaextract/: MainActivity.java
mediaextract/src/main/res/layout/: activity_main.xml
mediaextract/src/main/res/values/: strings.xml
mp4player/: build.gradle
mp4player/src/main/: AndroidManifest.xml
mp4player/src/main/java/com/example/mp4player/: MainActivity.java
mp4player/src/main/res/layout/: activity_main.xml
mp4player/src/main/res/values/: strings.xml
publiclib/: build.gradle
publiclib/src/main/: AndroidManifest.xml
publiclib/src/main/res/drawable/: select_record.xml
publiclib/src/main/res/values/: colors.xml  strings.xml
videorecorder/: build.gradle
videorecorder/src/main/: AndroidManifest.xml
videorecorder/src/main/res/drawable/: ic_fiber_manual_record_24dp.xml  main_pb_bg.xml  pgs_bar_bg.xml  shape_pgsb.xml
videorecorder/src/main/res/layout/: activity_main.xml
videorecorder/src/main/res/values/: strings.xml  styles.xml
(+11 files in other folders)
